--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body {
   background-color: black;
 
   display: flex;
-  flex-flow: wrap;
+  /* flex-flow: wrap; */
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-h1 {
+h1 { 
   font-size: 5rem;
   color: grey;
 }
